Bug 317142 - config variables for symbol viewer plugin are not loaded on startup
Summary: config variables for symbol viewer plugin are not loaded on startup
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-21 17:24 UTC by Tao Bao
Modified: 2013-03-21 19:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.2
Sentry Crash Report:


Attachments
Load and set the config variables for symbol viewer plugin on startup. (768 bytes, patch)
2013-03-21 17:26 UTC, Tao Bao
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tao Bao 2013-03-21 17:24:24 UTC
There are two config variables (types_on and expanded_on) for the symbol viewer plugin. They are not loaded on startup in kate-4.10.1, which was broken in recent versions. For example, when you set the types_on off from the menu (which means to not display functions parameters), you can see it works right after the setting. But when reopen kate, the parameters come on again, unless you open and close the setting dialogue again (which will reload the configs).


Reproducible: Always

Steps to Reproduce:
1. Open the configure dialogue from the menu and set the uncheck the checkbox for "display functions parameters" for the symbolviewer plugin.
2. Close the dialogue and one can see the function parameters not displaying as expected.
3. Restart Kate. The function parameters come back again.
Actual Results:  
In Step 3, function parameters in the symbolviewer show up again.

Expected Results:  
In Step 3, after restarting Kate it should look the same as before exiting which doesn't display the function parameters in the symbolviewer function list.

Have checked the old version in which it works fine for the above option. There used to be two lines in KatePluginSymbolViewerView::KatePluginSymbolViewerView() for loading the settings.

  types_on = KConfigGroup(KGlobal::config(), "PluginSymbolViewer").readEntry("ViewTypes", false);
  expanded_on = KConfigGroup(KGlobal::config(), "PluginSymbolViewer").readEntry("ExpandTree", false);

But they are removed in 4.10.1.
Comment 1 Tao Bao 2013-03-21 17:26:31 UTC
Created attachment 78273 [details]
Load and set the config variables for symbol viewer plugin on startup.
Comment 2 Kåre Särs 2013-03-21 19:32:28 UTC
Git commit 4e330b193f3447fe04e220b1e178765707de0147 by Kåre Särs.
Committed on 21/03/2013 at 20:26.
Pushed by sars into branch 'KDE/4.10'.

Load and set the config variables for symbol viewer plugin on startup.
Thanks rehash for the patch!
FIXED-IN: 4.10.2

M  +3    -0    kate/plugins/symbolviewer/plugin_katesymbolviewer.cpp

http://commits.kde.org/kate/4e330b193f3447fe04e220b1e178765707de0147
Comment 3 Kåre Särs 2013-03-21 19:32:59 UTC
Git commit baf036064967e7f0b71619f1634c2ad908cecdf9 by Kåre Särs.
Committed on 21/03/2013 at 20:26.
Pushed by sars into branch 'master'.

Load and set the config variables for symbol viewer plugin on startup.
Thanks rehash for the patch!
FIXED-IN: 4.10.2

M  +3    -0    kate/plugins/symbolviewer/plugin_katesymbolviewer.cpp

http://commits.kde.org/kate/baf036064967e7f0b71619f1634c2ad908cecdf9