Load and set the config variables for symbol viewer plugin on startup. Thanks rehash for the patch!

BUG:317142
FIXED-IN: 4.10.2